# template

./: LICENSE  README.md  pyproject.toml
src/template/: app.py  inserv1.py  inserv2.py  trace.html
src/template/drivers/: driver.py  fake_io_driver.py  fake_odmr_driver.py  fake_ps_driver.py  insmgr.py  local_inserv.py  remote_inserv.py  subsystems_driver.py
src/template/experiments/: odmr.py
src/template/gui/: app.py  elements.py  logs
