[tool.poetry]
name = "nspyre-template"
version = "1.0"
description = "An nspyre experiment template."
authors = [
	"Jacob Feder <jacobsfeder@gmail.com>",
]
maintainers = [
	"Jacob Feder <jacobsfeder@gmail.com>"
]
readme = "README.md"
packages = [{include = "template", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
nspyre = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
